[TP2] Ajout des méthodes de taches terminées